# grokprime

./: .gitignore  Cargo.toml  README.md
personas/: shadow.yaml
personas/friday/: friday.yaml
personas/friday/history/: friday_history.json
personas/historian/: historian.yaml
personas/shadow/: shadow.yaml
personas/shadow/history/: shadow_history.json
personas/viral/: viral.yaml
personas/viral/history/: viral_history.json
src/: cli.rs  config.rs  errors.rs  history.rs  lib.rs  main.rs  models.rs  outputs.rs  prelude.rs  system_info.rs  tui.rs  user_input.rs
src/agent_history/: conversations.rs  mod.rs
src/claude/: client.rs  models.rs
src/commands/: mod.rs
src/grok/: agent.rs  client.rs  conversations.rs  history.rs  mod.rs
src/llm/: client.rs  mod.rs
src/persona/: agent.rs  agent_manager.rs  agent_registry.rs  agents.rs  manager.rs  mod.rs  operations.rs
src/tui/: agent_pane.rs  app.rs  command_handler.rs  input.rs  mod.rs  tui.rs  widgets.rs
src/twitter/: client.rs  mod.rs  models.rs
src/user/: mod.rs  system_info.rs  user_input.rs
src/utilities/: cli.rs  mod.rs  outputs.rs
