[package]
name = "grokprime-brain"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sysinfo = { version = "0.33", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
