[package]
name = "grokprime-brain"
version = "0.1.0"
edition = "2024"

[dependencies]
oauth1-request = "0.6"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sysinfo = { version = "0.33", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
serde_yaml = "0.9.34"
anyhow = "1.0.100"
uuid = { version = "1.3", features = ["v4"] }
dlog = { path = "../../toolbox//dlog" }
once_cell = "1.21.3"
futures-util = "0.3.31"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "1.0"
walkdir = "2.4.9"
async-trait = "0.1"
tui-textarea = "0.4"
arboard = "3"